--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ MANIFEST
 
 # Installer logs
 pip-log.txt
+cookie.txt
+collection.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
